--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1001vies87</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <!-- Image en haut -->
+    <header>
+        <img src="votre-image.jpg" alt="Image en tête" class="full-width-image">
+    </header>
+
+    <!-- Titre centré -->
+    <h1>1001vies87</h1>
+
+    <!-- Boutons alignés verticalement et centrés -->
+    <div class="button-container">
+        <a href="https://facebook.com" class="btn">Facebook</a>
+        <a href="https://github.com" class="btn">GitHub</a>
+        <a href="https://instagram.com" class="btn">Instagram</a>
+    </div>
+
 </body>
 </html>
