--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Image en haut -->
     <header>
-        <img src="votre-image.jpg" alt="Image en tête" class="full-width-image">
+        <img src="images/1001vies87_logo.png" alt="Logo" class="full-width-image">
     </header>
 
     <!-- Titre centré -->
