--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Image en haut -->
     <header>
-        <img src="images/1001vies87_logo.png" alt="Logo" class="full-width-image">
+        <img src="images/1001vies87_logo.png" alt="Logo" class="logo-image">
     </header>
 
     <!-- Titre centré -->
@@ -18,9 +18,9 @@
 
     <!-- Boutons alignés verticalement et centrés -->
     <div class="button-container">
-        <a href="https://facebook.com" class="btn">Facebook</a>
-        <a href="https://github.com" class="btn">GitHub</a>
-        <a href="https://instagram.com" class="btn">Instagram</a>
+        <a href="https://www.helloasso.com/" class="btn">Adhérer à l'association</a>
+        <a href="" class="btn">David contre Goliath : les éoliennes</a>
+        <a href="https://www.facebook.com/profile.php?id=61553022907597" class="btn">Facebook</a>
     </div>
 
 </body>
