--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <!-- Boutons alignés verticalement et centrés -->
     <div class="button-container">
-        <a href="https://www.helloasso.com/" class="btn">Adhérer à l'association</a>
+        <a href="https://www.helloasso.com/" class="btn">
+			<img src="adherer.png" alt="image-adherer" class="icon"> Adhérer à l'association
+		</a>
         <a href="" class="btn">David contre Goliath : les éoliennes</a>
         <a href="https://www.facebook.com/profile.php?id=61553022907597" class="btn">Facebook</a>
     </div>
