--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Image en haut -->
     <header>
-        <img src="images/1001vies87_logo.png" alt="Logo" class="logo-image">
+        <img src="images/1001vies87_logo.png" alt="Logo" class=" ">
     </header>
 
     <!-- Titre centré -->
@@ -19,7 +19,7 @@
     <!-- Boutons alignés verticalement et centrés -->
     <div class="button-container">
         <a href="https://www.helloasso.com/" class="btn">
-			<img src="adherer.png" alt="image-adherer" class="icon"> Adhérer à l'association
+			<img src="adherer.png" alt="image-adherer.jpg" class="icon"> Adhérer à l'association
 		</a>
         <a href="" class="btn">David contre Goliath : les éoliennes</a>
         <a href="https://www.facebook.com/profile.php?id=61553022907597" class="btn">Facebook</a>
