--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Image en haut -->
     <header>
-        <img src="images/1001vies87_logo.png" alt="Logo" class=" ">
+        <img src="images/1001vies87_logo.png" alt="Logo" class="logo-image">
     </header>
 
     <!-- Titre centré -->
