--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
         <img src="images/1001vies87_logo.png" alt="Logo" class="logo-image">
     </header>
 
+
     <!-- Titre centré -->
-    <h1>1001vies87</h1>
+    <h1>
+	La protection de l'environnement
+	</h1>
+    <!-- Sous-Titre centré -->
+    <h2>
+	Notre mission est la protection des paysages de l'environnement, de la nature et de la biodiversité sur la Communauté de Communes des Pays de Nexon et Monts de Chalus.</br>
+	Mobilisation citoyenne contre le projet de 6 Eoliennes de 240m de haut sur les communes de Rilhac-Lastour et Bussière-Galant (87) ainsi que tout autre projet qui serait à l'encontre de la vie animale et humaine
+	</h2>
 
     <!-- Boutons alignés verticalement et centrés -->
     <div class="button-container">
         <a href="https://www.helloasso.com/" class="btn">
-			<img src="adherer.png" alt="image-adherer.jpg" class="icon"> Adhérer à l'association
+			<img src="images/image-adherer.png" alt="image-adherer.png" class="icon"> Adhérer à l'association
 		</a>
         <a href="" class="btn">David contre Goliath : les éoliennes</a>
         <a href="https://www.facebook.com/profile.php?id=61553022907597" class="btn">Facebook</a>
