--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <a href="https://www.helloasso.com/" class="btn">
 			<img src="images/image-adherer.png" alt="image-adherer.png" class="icon"> Adhérer à l'association
 		</a>
-        <a href="" class="btn">David contre Goliath : les éoliennes</a>
+        <a href="pages/le-combat" class="btn">
+		<img src="images/image-eolienne.png" alt="image-eolienne.png" class="icon"> David contre Goliath : les éoliennes
+		</a>
         <a href="https://www.facebook.com/profile.php?id=61553022907597" class="btn">Facebook</a>
     </div>
 
