--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <a href="https://www.facebook.com/profile.php?id=61553022907597" class="btn">
 		<img src="images/image-facebook.png" alt="image-facebook.png" class="icon">Facebook</a>
     </div>
+	
+	    <!-- Section avec image en arrière-plan -->
+    <section class="background-image-section">
+        <h2>Section avec image en arrière-plan</h2>
+    </section>
 
 </body>
 </html>
